fix: horizontal scrollbar

--- a/src/app/(privateProfile)/savings/savings.module.scss
+++ b/src/app/(privateProfile)/savings/savings.module.scss
@@ -215,9 +215,7 @@
 
 	height: 100%;
 
-	@media (max-width: 769px) {
-		width: 90vw;
-	}
+
 	@media (max-width: 600px) {
 		overflow-x: auto;
 	}
@@ -240,6 +238,7 @@
 
 .savingsFormContentWrapperList::-webkit-scrollbar {
 	width: 4px;
+	height: 4px;
 	background-color: var(--color-light-grayish-green);
 }
 .savingsFormContentWrapperList::-webkit-scrollbar-thumb {
